# jumpstart-macos

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .vimrc  Makefile  README.md  ansible.cfg  notes.txt  pyproject.toml  sonar-project.properties  vmware_fusion.lit
.github/workflows/: build.yml  lint.yml  playbook_validation.yml  sonar.yml  validation.yml
docker/centos/systemd/: Dockerfile
docker/centos/systemd/tools/: Dockerfile  readme.md
docker/qnap/: build-git.sh  build-gnu-tools.sh  build-removal-tools.sh  common.sh  get-latest-git.sh  install-on-qts.sh
playbook/: install.yml  local.yml
playbook/tasks/: install_asdf.yml  install_default.yml  install_dev_tools.yml  install_extra.yml  install_k8s_tools.yml  install_microsoft.yml
playbook/tasks/install/: asdf.yml  default.yml  dev_tools.yml  devops_tools.yml  extra.yml  java.yml  k8s_tools.yml  mac_ported.yml  microsoft.yml  network_tools.yml  office.yml  productivity.yml  python.yml  ruby.yml  system_tools.yml  vagrant.yml
vagrant/: Vagrantfile  readme.md
vagrant/arm64/: Vagrantfile
